--- a/src/main/resources/UI/EditDeleteEventUI.fxml
+++ b/src/main/resources/UI/EditDeleteEventUI.fxml
@@ -8,15 +8,15 @@
 
 <?import javafx.scene.text.Font?>
 <?import javafx.collections.FXCollections?>
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0"
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0"
             prefWidth="550.0" style="-fx-background-color: #f2f2f2;"
             xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="Controllers.EditDeleteEventController">
+            >
     <children>
-        <ChoiceBox fx:id="eventChoice" layoutX="100.0" layoutY="40.0" prefHeight="26.0" onAction="#selectEventOnAction" prefWidth="354.0">
+        <ChoiceBox fx:id="eventChoice" layoutX="100.0" layoutY="30.0" prefHeight="26.0" onAction="#selectEventOnAction" prefWidth="354.0">
 
         </ChoiceBox>
-        <Button fx:id="loadButton" layoutX="10.0" layoutY="40.0" onAction="#LoadEventsOnAction"  mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Cancel" textFill="#13a98e">
+        <Button fx:id="loadButton" layoutX="10.0" layoutY="25.0" onAction="#LoadEventsOnAction"  mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Load" textFill="#13a98e">
             <font>
                 <Font size="16.0" />
             </font>
@@ -124,12 +124,12 @@
 <!--        </Label>-->
 
 
-        <Button fx:id="cancelButton" layoutX="100.0" layoutY="680.0"  mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Cancel" textFill="#13a98e">
+        <Button fx:id="cancelButton" layoutX="100.0" layoutY="700.0" onAction="#cancelButtonOnAction" mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: grey; -fx-cursor: hand;" text="Cancel" textFill="#ffffff">
             <font>
                 <Font size="16.0" />
             </font>
         </Button>
-        <Button fx:id="createButton" layoutX="370.0" layoutY="680.0" onAction="#CreateEventOnAction" mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: transparent; -fx-cursor: hand;" text="Create" textFill="#13a98e">
+        <Button fx:id="createButton" layoutX="350.0" layoutY="700.0" onAction="#EditEventOnAction" mnemonicParsing="false" prefHeight="40.0" prefWidth="103.0" style="-fx-background-color: grey; -fx-cursor: hand;" text="Create" textFill="#ffffff">
             <font>
                 <Font size="16.0" />
             </font>
